# SLOBF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: datasets.yaml  default.yaml  experiments.yaml  models.yaml
scripts/: download_datasets.sh  run_all.sh  run_rq1.sh  run_rq2.sh  run_rq3.sh  setup_env.sh
slobf/: __init__.py  cli.py  config.py  logging_utils.py
slobf/binary/: __init__.py  extractor.py
slobf/compiler/: __init__.py  manager.py
slobf/dataset/: __init__.py  manager.py
slobf/experiments/: __init__.py  rq1.py  rq2.py  rq3.py  visualizer.py
slobf/metrics/: __init__.py  calculator.py  semantic.py
slobf/models/: __init__.py  base.py  manager.py
slobf/models/adapters/: cebin.py  clap.py  jtrans.py  palmtree.py
slobf/obfuscators/: __init__.py  base.py  cff.py  de.py  er.py  fs.py  jci.py  manager.py  opi.py  tigress.py
slobf/parser/: __init__.py  c_parser.py
slobf/reports/: __init__.py
slobf/rl/: __init__.py  agent.py  cache.py  env.py
slobf/utils/: __init__.py  paper_utils.py
tests/: test_config.py  test_functions.c  test_metrics.py  test_obfuscators.py  test_parser.py
