[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "slobf"
version = "0.1.0"
description = "Source-Level Obfuscation for Binary Function Similarity Analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SLOBF Authors" }]
keywords = ["binary analysis", "obfuscation", "security", "similarity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "dacite>=1.8",
    "tqdm>=4.66",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tree-sitter>=0.21",
    "tree-sitter-c>=0.21",
    "pyelftools>=0.30",
    "capstone>=5.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "gymnasium>=0.28",
    "stable-baselines3>=2.1",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.5",
]
models = [
    "torch>=2.0",
    "transformers>=4.35",
]

[project.scripts]
slobf = "slobf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slobf*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
